--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-form-data": "^2.0.6",
     "firebase-admin": "^6.1.0"
   }
 }
